# libgim

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  Makefile.am  README  aabb.cpp  aabb.hpp  abnf.rl  adapter.cpp  adapter.hpp  adler.cpp  adler.hpp  annotation.hpp  annotations.hpp  ascii.hpp  backtrace.cpp  backtrace.hpp  backtrace_execinfo.cpp  backtrace_null.cpp  backtrace_stackwalk.cpp  backtrace_win32.cpp  bezier.cpp  bezier.hpp  bezier1.cpp  bezier2.cpp  bezier3.cpp  bitwise.cpp  bitwise.hpp  bsdsum.cpp  bsdsum.hpp  cast.hpp  cmdopt.cpp  cmdopt.hpp  cmdopt.ipp  colour.cpp  colour.hpp  colour.ipp  configure.ac  coord.hpp  (+184 more)
algo/: sort.cpp  sort.hpp  sort.ipp
alloc/: affix.cpp  affix.hpp  aligned.hpp  allocator.cpp  allocator.hpp  allocator.ipp  arena.cpp  arena.hpp  arena.ipp  dynamic.hpp  fallback.cpp  fallback.hpp  fwd.hpp  linear.cpp  linear.hpp  malloc.cpp  malloc.hpp  null.cpp  null.hpp  stack.cpp  stack.hpp  stack.ipp
alloc/raw/: affix.cpp  affix.hpp  aligned.hpp  dynamic.hpp  fallback.cpp  fallback.hpp  linear.cpp  linear.hpp  malloc.cpp  malloc.hpp  null.cpp  null.hpp  stack.cpp  stack.hpp  stack.ipp
build-aux/: wine-crlf.sh
coord/: base.hpp  fwd.hpp  init.hpp  iostream.hpp  names.hpp  ops.hpp  store.hpp  traits.hpp
crypto/: arc4.cpp  arc4.hpp  ice.cpp  ice.hpp  salsa.cpp  salsa.hpp  tea.cpp  tea.hpp  xtea.cpp  xtea.hpp  xxtea.cpp  xxtea.hpp
detail/: coord.hpp
doc/: noise.asc
encode/: base.cpp  base.hpp
fixup/experimental/: filesystem  filesystem.cpp  filesystem.hpp
geom/: aabb.cpp  aabb.hpp  aabb.ipp  cylinder.cpp  cylinder.hpp  ellipse.cpp  ellipse.hpp  ellipse.ipp  fwd.hpp  iostream.cpp  iostream.hpp  ops.hpp  plane.cpp  plane.hpp  ray.cpp  ray.hpp  rect.cpp  sample.hpp  sample.ipp  sphere.cpp  sphere.hpp
hash/: adler.cpp  adler.hpp  bsdsum.cpp  bsdsum.hpp  crc.cpp  crc.hpp  fasthash.cpp  fasthash.hpp  fletcher.cpp  fletcher.hpp  fnv1a.cpp  fnv1a.hpp  fwd.hpp  hmac.cpp  hmac.hpp  hotp.cpp  hotp.hpp  keccak.cpp  keccak.hpp  md2.cpp  md2.hpp  md4.cpp  md4.hpp  md5.cpp  md5.hpp  murmur.cpp  murmur.hpp  pbkdf1.cpp  pbkdf1.hpp  pbkdf2.cpp  pbkdf2.hpp  ripemd.cpp  ripemd.hpp  sha1.cpp  sha1.hpp  sha2.cpp  sha2.hpp  simple.cpp  simple.hpp  wang.hpp  (+3 more)
hash/murmur/: common.cpp  common.hpp  murmur1.cpp  murmur1.hpp  murmur2.cpp  murmur2.hpp  murmur2.ipp  murmur3.cpp  murmur3.hpp
image/: buffer.cpp  buffer.hpp  buffer.ipp
job/: queue.cpp  queue.hpp
json/: clean.cpp  except.cpp  except.hpp  flat.cpp.rl  flat.hpp  fwd.hpp  schema.cpp  schema.hpp  tree.cpp  tree.hpp
json2/: event.cpp  event.hpp  except.hpp  fwd.hpp  tree.cpp  tree.hpp
json2/personality/: base.cpp  base.hpp  jsonish.cpp  jsonish.hpp  rfc7519.cpp  rfc7519.hpp
m4/: ax_boost_base.m4  nc_append_one_compile_flag.m4  nc_boost.m4  nc_boost_base.m4  nc_boost_filesystem.m4  nc_boost_system.m4  nc_boost_thread.m4  nc_cxx.m4  nc_debugging.m4  nc_optimisation.m4  nc_platform.m4  nc_subpackage.m4  nc_warnings.m4
maths/: fast.hpp  fast.ipp  matrix.cpp  matrix.hpp  polynomial.hpp  polynomial.ipp  vector.cpp  vector.hpp
memory/: deleter.cpp  deleter.hpp  system.cpp  system.hpp
memory/buffer/: circular.cpp  circular.hpp  paged.cpp  paged.hpp
net/: address.cpp  address.hpp  except.cpp  except.hpp  socket.cpp  socket.hpp  types.cpp  types.hpp
noise/: basis.cpp  basis.hpp  fractal.cpp  fractal.hpp  fwd.hpp  lerp.cpp  lerp.hpp  lut.cpp  lut.hpp  midpoint.cpp  midpoint.hpp  rand.hpp  rand.ipp  turbulence.hpp  turbulence.ipp
posix/: dir.cpp  dir.hpp  dir.ipp  except.cpp  except.hpp  fd.cpp  fd.hpp  fwd.hpp  map.cpp  map.hpp  socket.cpp  socket.hpp
rand/: lcg.cpp  lcg.hpp  mwc64x.cpp  mwc64x.hpp  xorshift.cpp  xorshift.hpp
roots/: bisection.hpp
test/: .gitignore  CMakeLists.txt  Makefile.am  aabb.cpp  affine.cpp  ascii.cpp  backtrace.cpp  bezier.cpp  bitwise.cpp  checksum.cpp  cmdopt.cpp  colour.cpp  comparator.cpp  coord.cpp  endian.cpp  exe.cpp  extent.cpp  fixed.cpp  float.cpp  format.cpp  hmac.cpp  hotp.cpp  hton.cpp  image.cpp  introspection.cpp  ip.cpp  iterator.cpp  json-check.cpp  json-parse.sh.in  json-schema.in  json-schema.py.in  json.cpp  json.pl  json.test  json.test.in  json_types.cpp  line.cpp  maths.cpp  maths_fast.cpp  maths_matrix.cpp  (+36 more)
test/algo/: sort.cpp
test/alloc/: aligned.cpp  arena.cpp  dynamic.cpp  linear.cpp  stack.cpp
test/crypto/: arc4.cpp  ice.cpp  salsa.cpp  tea.cpp  xtea.cpp  xxtea.cpp
test/encode/: base.cpp
test/geom/: aabb.cpp  ray.cpp
test/hash/: checksum.cpp  crc.cpp  fasthash.cpp  fnv1a.cpp  hmac.cpp  hotp.cpp  keccak.cpp  md2.cpp  md4.cpp  md5.cpp  murmur.cpp  ripemd.cpp  sha1.cpp  sha2.cpp  xxhash.cpp
test/job/: queue.cpp
test/json/bad/: 1000_leading_zero.json  2000_trailing_comma.json  3000_missing_object_key.json
test/json/good/: 0000_integer.json  0000_real.json  1001_pair_number.json  1002_pair_number.json  1003_pair_number.json  1004_pair_number.json  1005_pair_number.json  1006_pair_number.json  1007_pair_number.json  1008_bool_true.json  1009_bool_false.json  1010_null.json  2000_array.json  3000_object.json  3000_string_escape.json
test/json/schema/: empty_0001_pass.json  signed_min.schema  string_length.schema  type_any.schema  unsigned_max.schema
test/json2/: event.cpp
test/maths/: maths.cpp  matrix.cpp
test/memory/: deleter.cpp
test/memory/buffer/: circular.cpp  paged.cpp
test/options/: success.cpp
test/rand/: buckets.cpp
test/roots/: bisection.cpp
test/time/: 8601.cpp
threads/: barrier.hpp  barrier_posix.cpp  condition.hpp  condition_posix.cpp  mutex.hpp  mutex_posix.cpp  mutex_win32.cpp  mutex_win32.hpp  semaphore.hpp  semaphore_posix.cpp  spinlock.hpp  spinlock_posix.cpp  thread.hpp  thread_posix.cpp  thread_posix.hpp  thread_posix.ipp  thread_win32.cpp  thread_win32.hpp
time/: parse.hpp  parse8601.cpp.rl
tools/: .gitignore  hash.cpp  json-clean.cpp  json-schema.cpp  json-validate.cpp  noise.cpp  scratch.cpp
types/: bits.hpp  casts.hpp  comparator.hpp  comparator.ipp  string.cpp  string.hpp  traits.hpp
win32/: except.cpp  except.hpp  handle.cpp  handle.hpp  registry.cpp  registry.hpp
(+49 files in other folders)
